[gd_scene load_steps=12 format=3 uid="uid://ccd2kgud4w32e"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_26bnj"]
[ext_resource type="Script" path="res://Player/PlayerCamera.gd" id="2_2nyjv"]
[ext_resource type="Texture2D" uid="uid://d3c1lda62gkc1" path="res://Player/hand.png" id="4_883vw"]
[ext_resource type="PackedScene" uid="uid://vq2es264bss8" path="res://Player/Inventory/player_inventory.tscn" id="5_7xsuc"]
[ext_resource type="Script" path="res://Player/inventory_handler.gd" id="6_olwwk"]
[ext_resource type="PackedScene" uid="uid://dfcsb62rmmpgh" path="res://Item/MovingObjectHandler.tscn" id="6_xqo3e"]
[ext_resource type="Shader" path="res://Godrays/LightRays.gdshader" id="7_jpetu"]
[ext_resource type="Script" path="res://Godrays/color_rect_light_rays.gd" id="8_h1v0m"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fugl6"]

[sub_resource type="ViewportTexture" id="ViewportTexture_loqrf"]
viewport_path = NodePath("GodRayStuff/SubViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hmxnw"]
resource_local_to_scene = true
shader = ExtResource("7_jpetu")
shader_parameter/ray_length = 1.0
shader_parameter/ray_intensity = 1.0
shader_parameter/light_source_scale = 1.0
shader_parameter/light_source_feather = 2.0
shader_parameter/noise_strength = 0.2
shader_parameter/light_source_pos = Vector2(0, 0)
shader_parameter/light_source_dir = Vector3(0.5, -1, 0.25)
shader_parameter/camera_dir = Vector3(-0.5, 1, -0.25)
shader_parameter/subviewport_tex = SubResource("ViewportTexture_loqrf")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_26bnj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("CapsuleShape3D_fugl6")

[node name="Camera3D" type="Camera3D" parent="."]
script = ExtResource("2_2nyjv")

[node name="ItemRayCast" type="RayCast3D" parent="Camera3D"]
visible = false
target_position = Vector3(0, 0, -1.5)
collide_with_areas = true
collide_with_bodies = false

[node name="HeldItem" type="Sprite3D" parent="Camera3D"]
transform = Transform3D(0.283831, 0, -0.958874, 0, 1, 0, 0.958874, 0, 0.283831, 0.313791, -0.146981, -0.336494)
texture_filter = 0

[node name="HandIcon" type="Sprite3D" parent="Camera3D"]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, -0.345098)
texture = ExtResource("4_883vw")

[node name="GodRayRemote" type="RemoteTransform3D" parent="Camera3D"]
remote_path = NodePath("../../GodRayStuff/SubViewportContainer/SubViewport/Camera3D_Viewport")
update_scale = false

[node name="MovingObjectRaycast" type="RayCast3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
visible = false
collision_mask = 4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="PlayerInventory" parent="CanvasLayer" instance=ExtResource("5_7xsuc")]

[node name="FPS" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="InventoryHandler" type="Node" parent="."]
script = ExtResource("6_olwwk")

[node name="MovingObjectRayCast" parent="." instance=ExtResource("6_xqo3e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.272326, 0)
enabled = false

[node name="GodRayStuff" type="Node" parent="."]

[node name="Control" type="Control" parent="GodRayStuff"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect_LightRays" type="ColorRect" parent="GodRayStuff/Control"]
material = SubResource("ShaderMaterial_hmxnw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_h1v0m")

[node name="SubViewportContainer" type="SubViewportContainer" parent="GodRayStuff"]
visibility_layer = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -216.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="GodRayStuff/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="Camera3D_Viewport" type="Camera3D" parent="GodRayStuff/SubViewportContainer/SubViewport"]
